[package]
publish = false
name = "nimtool"
version = "0.6.1"
description = "A simple tool to grab Nimiq metrics from api.nimiqx.com"
authors = ["David Wagner <support@nimtool.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Germanicus1982/nimtool"

[dependencies]
reqwest = "0.8.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0.22"
serde_yaml = "0.7.5"
chrono = "0.4.4"
textplots = "0.3.0"
separator = "0.3.1"
directories = "1.0.1"
clap = {version = "2.32.0", features = ["yaml", "suggestions", "wrap_help"]}

# TODO: Implement internationalization
#
#[features]
#en = []
#es = []