[package]
publish = false
name = "nimtool"
version = "1.0.0"
description = "A simple tool to grab Nimiq metrics from api.nimiqx.com"
authors = ["David Wagner <support@nimtool.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Germanicus1982/nimtool"

[dependencies]
reqwest = "0.8.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0.22"
serde_yaml = "0.7.5"
chrono = "0.4.4"
textplots = "0.3.0"
separator = "0.3.1"
directories = "1.0.1"
failure = "0.1.1"
failure_derive = "0.1.1"
clap = {version = "2.32.0", features = ["yaml", "suggestions", "wrap_help"]}

[package.metadata.deb]
maintainer = "David Wagner <support@nimtool.com>"
copyright = "2018, David Wagner <support@nimtool.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple tool to grab Nimiq metrics from api.nimiqx.com"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/nimtool", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/nimtool/README", "644"],
]

# TODO: Implement internationalization
#
#[features]
#en = []
#es = []